
2003-08-25	Joel Becker <joel.becker@oracle.com>

	* configure.in: Add RPM_VERSION.
	* Config.make.in: Add RPM_VERSION.
	* Makefile: Add RHAS srpm and rpm rules.
	* test/{osmtest,osmtest-multi}: Remove wrappers.
	* test/Makefile: Make osmtest and osmtest-multi build with
		-rpath.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* redhat/ocfs.init: Modernize based on ocfs lessons.

2003-08-22	Joel Becker <joel.becker@oracle.com>

	* redhat/Makefile: Added.
	* Makefile: Add redhat subdir.
	* include/linux/Makefile: Add osmcompat32.h.

2003-08-22	Joel Becker <joel.becker@oracle.com>

	* include/osmlib.h: Latest drop from 10g.
	* include/osmabi.h: Pad struct osmio to 64bit size.
	* include/osmerror.h: Silly capitalization.
	* test/osmtest-multi.c: Remove OSM_API_STUB bits.
	* test/osmtest.c: Remove OSM_API_STUB, remove intr argument
		from osm_io() calls.
	* test/sizes.c: Add x86-64.
	* libosm/osmlib.c: Remove posted calls.  Error on
		OSM_WAIT/waitlen bits.  Remove intr from osm_io().
	* include/linux/osmabi.h: Remove intr argument and add pad.
	* include/linux/osmkernel.h: Propagate osmlib.h alignment
		changes.
	* kernel/osm.c: Remove link_osm_ioc from promote call.

2003-08-20	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmkernel.h: Add pad for 32->64.
	* include/osmlib.h: Add pad for 32->64.
	* kernel/osm.c: Debug logging for 32->64.

2003-08-19	Joel Becker <joel.becker@oracle.com>

	* test/sizes.c: Simple structure size examiner.
	* test/Makefile: Add sizes
	* libosm/osmlib.c: Don't prefil iid structure, and use lseek64()
	* kernel/osm.c: Quick OSM_ABI_VERSION cast.
	* include/linux/osmabi.h: 32->64 bugs.

2003-08-18	Joel Becker <joel.becker@oracle.com>

	* kernel/osm.c: Fix osmfs_dir_operations for 2.4.19/20/21.
	* test/osmtest.c: Fix buffer aligning for 64bit.

2003-06-24	Joel Becker <joel.becker@oracle.com>

	* kernel/osm.c: Fix complete_ios_thunk like I fixed _native.

2003-06-24	Joel Becker <joel.becker@oracle.com>
