@@ -1,6 +1,13 @@
 
 2003-08-25	Joel Becker <joel.becker@oracle.com>
 
+	* kernel/Makefile: s/ocfs/osm bug.
+	* redhat/osm-2.4.9-e.spec.in: Make it work.
+	* test/osmprofile: Remove wrapper.
+	* tools/Makefile: osmtool in sbin.
+
+2003-08-25	Joel Becker <joel.becker@oracle.com>
+
 	* configure.in: Add RPM_VERSION.
 	* Config.make.in: Add RPM_VERSION.
 	* Makefile: Add RHAS srpm and rpm rules.
